# socket.io-client-cpp

./: .gitignore  CMakeLists.txt
cmake/: hunter.Config.cmake.in
cmake/Hunter/: config.cmake
